--- a/FormelnTGI.tex
+++ b/FormelnTGI.tex
@@ -23,11 +23,11 @@ Parallel WS: $\frac{1}{R_{ges}} = \sum \frac{1}{R_i}$\\
 Leistung: $P =U \cdot I = \frac{U^2}{R} = I^2 \cdot R $ \\
 \phantom{ssssssssss} $[P] = 1V \cdot A =1 W$\\
 Kein Strom $\Rightarrow$ U in Masche gleich!\\
+U zu Masse $\Rightarrow$ alles danach drin
 
 \underline{\textbf{Kondensator:}}\\
 Kapazität: $C = \frac{Q}{U} = \frac{\varepsilon \cdot A }{d},$\\
 \phantom{ssssssssssii} $[C]=1F$\\
-\phantom{sssssssssssii} $d =$ Plattenabstand\\
 Ladung: $q = \int_{t_0}^t i(\tau) d\tau + q_0$\\
 \phantom{sssssssis} $\stackrel{homogen}{=} I \cdot t$\\
 \phantom{ssssssssssii} $[q]=1C$\\
@@ -37,30 +37,31 @@ Kond. parallel: $C_{ges} = C_1 + C_2$\\
 Kond. in Reihe: $C_{ges} = C_1 || C_2$\\
 Kond. in Reihe: $Q_1 = Q_2 = Q_{12}$\\
 
-$\mathbf{U_a(t) = k_1 + k_2 \cdot e^{-\frac{t-t_0}{\tau}}}$\\
-Berechne $k_1$ durch $t \rightarrow \infty$, oft $U_B$\\
-$k_2$ durch $t = 0$, oft $-U_B$\\
+$\mathbf{U_a(t) = k_0 + k_1 \cdot e^{-\frac{t-t_0}{\tau}}}$\\
+Wenn WS dazu, dann V-Teiler\\
+Berechne $k_0$ durch $t \rightarrow \infty$, oft $U_B$\\
+$k_1$ durch $t = 0$, oft $-U_B$\\
 $[k] = 1V$\\
-
-Zeitkonstante: $\tau = R \cdot C; [\tau] = 1s$\\
+Str.q: $U = \frac{Q}{C} = \frac{I_q \cdot (t-t_0)}{C} + U_c(t_0)$\\
+\phantom{sss} ,Kennlinie linear\\
+\textbf{2}Zeitkonst.: $\tau = R \cdot C;[\tau] = 1s$\\
 \phantom{ss}falls WS in Reihe $\Rightarrow$ parallel\\
 $t =\frac{T}{2} = \frac{1}{2f}$\\
 Zeit Auf-/Entlanden: $t = 3\tau$\\
 
-"eingeschwungen" $\Rightarrow i_C = 0$\\
+"einge." $\Rightarrow i_C = C \cdot \frac{dU_c}{dt} = 0$\\
+\phantom{sss} $\Rightarrow U_x = 0 \Rightarrow U_Y = U_B$
 
 Arbeit(=Energie): $W = \int_0^\infty P dt$\\
 \phantom{sssssssss} $= \frac{U_b^2 \cdot C}{2} $\\
 \phantom{sssssssss} $= [W] = 1J $\\
 $W_{Zyklus} = W_a + W_e$\\
-
 $\overline{P} = \frac{W_{Zyklus}}{T}$\\
-
-Tiefpass: Oben R, Mitte C, Integrator
+Tiefpass: Oben R, Mitte C, Integrator\\
+HP: Kennl.$U_A$ seltsam,$U_E$ normal
 \end{minipage}%
 ~~~~~~~
 \begin{minipage}{0.33\textwidth}
-%\vspace{-11.5 cm}
 
 \underline{\textbf{Felder:}}\\
 Stromdichte: $S=\frac{I}{A}$\\
@@ -77,11 +78,9 @@ Flussdichte: $B=\mu \cdot H, [B] = 1 \frac{Vs}{m^2}$\\
  
  \underline{\textbf{(Koaxial-)Leitungen}}:\\
 $R_W = \sqrt{\frac{L'}{C'}}$\\
-    \phantom{sssi} $=\frac{\sqrt{\epsilon_R \cdot \mu_R}}{c_0 \cdot C'}$\\
     \phantom{sssi} $=\frac{\sqrt{\mu_R} \cdot ln(\frac{d_a}{d_i})}{2c_0 \cdot \pi \cdot \epsilon_0 \cdot \sqrt{\epsilon_R}}$\\
-% Gleichung C', L'
 $C = \frac{1}{\sqrt{L' \cdot C'}} = \frac{c_0}{\sqrt{\epsilon_r \cdot \mu_s}}$\\
-$C' = \frac{2\pi \epsilon_0 \epsilon_r \cdot s}{ln(\frac{d_a}{d_i})}$\\
+$C' = \frac{2\pi \epsilon_0 \epsilon_r \cdot s}{ln(\frac{d_a}{d_i})}$ = $\frac{C}{l}$\\
 $L' = \frac{\sqrt{\epsilon_r \mu_r}}{c_0 \cdot \sqrt{C'}}$\\
 $X' = \frac{X}{l}$\\
 
@@ -91,12 +90,16 @@ $k_a = 1 + r_a = k_1$\\
 $R_w ==$ WS der Leitung\\
 $R_i ==$ WS vor der Leitung\\
 $R_a ==$ WS nach der Leitung\\
+$U_q == U_i$\\
+$t_i ==$ High-Zeit\\
 Reflexion: $U_r(l,t) = r_a \cdot U_k(l,t)$\\
 Anfang: $U_k(0,t)=k_0 \cdot U_{q}(t)$\\
-Ende: $U_k(x,t)= k_0 \cdot U_{q}(t-\Delta t)$\\
-$\Delta t = \frac{l}{c} = \frac{l}{\lambda f}$\\
+Mitte/Ende:\\
+\phantom{ss} $U_k(x,t)= k_0 \cdot U_{q}(t-\Delta t)$\\
+\phantom{sss}$\Delta t = \frac{l}{c} = \frac{l}{\lambda f}$\\
 Auskoppeln Gatter:\\
-\phantom{ss} $U_1(t) = k_a \cdot U_1(x,t)$\\
+\phantom{ss} $U_1(t) = k_a \cdot U_k(x,t) $\\
+\phantom{sssssssiiii}$= k_a\cdot k_0 \cdot U_q(t-\Delta t)$\\
 V Ende Leitung: $u_a = k_0 \cdot k_a \cdot u_q$\\
 
 LW-Leitung: $\alpha = \frac{L_P}{l}; [\alpha] = 1 \frac{dB}{m}$\\
@@ -110,18 +113,19 @@ Lichtleistung: $L_P = 10 \cdot lg\frac{P_e}{P_a} dB$\\
 ~~~~~~
 \begin{minipage}{0.33\textwidth}
 \underline{\textbf{Operationsverstärker:}}\\
+$V_D = \infty I_P=I_N=R_D=U_D=0$
 \includegraphics[scale=0.40]{NIOV.png}
 \includegraphics[scale=0.40]{IOV.png}
 $U_D = 0 \Rightarrow I_N = 0, U_N = 0$\\
 
 \includegraphics[scale=0.40]{NISTOV.png}\\
 \includegraphics[scale=0.40]{ISTOV.png}\\
-Umschalten, wenn $U_D = 0$\\
+Umschalt.:$U_D = 0 \Rightarrow U_G = U_{SP}$\\
 $U_A \in \{U_B,0\}$\\
 $U_D = 0 = U_P - U_{E_{HL}}$\\
-\phantom{sssi}$\Rightarrow U_{E_{HL}} = \frac{U_{A_{max}} \cdot R_2}{R_1 + R_2}$\\
+\phantom{sssi}$\Rightarrow U_{E_{HL}} = \frac{U_{A_{max}} \cdot R_1}{R_1 + R_2}$\\
 $U_D = 0 = U_P - U_{E_{LH}}$\\
-\phantom{sssi}$\Rightarrow U_{E_{LH}}= \frac{ U_{A_{min}} \cdot R_2}{R_1 + R_2}$\\
+\phantom{sssi}$\Rightarrow U_{E_{LH}}= \frac{ U_{A_{min}} \cdot R_1}{R_1 + R_2}$\\
 Diode: $\Rightarrow U_{E_{LH}} = 0$\\
 Schalthysterese:\\
 \phantom{sssssi} $H = |U_{E_{HL}} - U_{E_{LH}}|$\\
@@ -133,14 +137,15 @@ Schalthysterese:\\
 \newpage
 
 \begin{minipage}{0.33\textwidth}
-\vspace{-5cm}
+\vspace{-1cm}
 \includegraphics[scale=0.40]{Mult.png}\\
 \includegraphics[scale=0.40]{FF.png}\\
 
 \underline{\textbf{Diode:}}\\
 Gesperrt: $U_D < U_{F_0}$\\
 Leitend: $\Rightarrow U_D = U_{F_0}$\\
-Reale Diode sperrt: $\Rightarrow I_D(raus) = -I_S$\\
+D sperrt: $\Rightarrow I_D(raus) = (-I_S|0)$\\
+WS-Frei
 
 \underline{\textbf{Transistor:}}\\
 $I_G \stackrel{!}{=} 0A$\\
@@ -169,39 +174,42 @@ Wo Source-Drain durch Pot.\\
 NMOS hat nur nicht-negierte Literale und 1 Negation über kompletter Formel\\
 PMOS hat nur negierte Literale\\
 CMOS: komp. NMOS und PMOS Teile\\
-OR in Formel $\Rightarrow$ Parallelschaltung\\
-AND in Formel $\Rightarrow$ Reihenschaltung\\
+$+$F. $\Rightarrow$ Parallelschaltung\\
+$\mathbf{\cdot} \Rightarrow$ Reihenschaltung\\
 \end{minipage}
 ~~~~~~~
 \begin{minipage}{0.33\textwidth}
 
 
-\underline{\textbf{Multiplexer:}}\\
-OBDD: Nutze Shannon\\
-1. Mache aus geg. Formel neue Formeln, wo für 1. Variable 0 oder 1 angenommen wird.\\
-2. Mache aus diesen Formeln neue Formeln, bei denen 2. Variable 0 oder 1 angenommen wird.\\
-3. Jede Ebene von Funktionen ist 1 Ebene im Baum ist eine Ebene von Multiplexern. In x.ter Ebene ist x. Variable Schaltvariable an Mutliplexer\\
-
+\underline{\textbf{Logik:}}\\
 KDNF: Mint.(=1) $\Rightarrow e1e2e3 + ...\overline{0}$\\
 KKNF:Maxt.(=0) $, (a+b+c) \cdot ...\overline{1}$\\
-KV-Diagramme:\\ Grey-Code, \textbf{Rechtecke} müssen 2-er Potenzen als Seitenlänge haben.\\
+KV-Diagramme:\\ 
+\textbf{3,4 Block Drehen}\\
+GreyC., Rechtecke, übers. OK.\\
+GreyC:$(\overline{A} \overline{B}), (\overline{A}B), (AB), (A\overline{B})$\\
 min. DNF: 1en Verbinden\\
-min. KNF: 0en Verbinden\\
-Grey-Code:$(\overline{A} \overline{B}), (\overline{A}, B), (A,B), (A, \overline{B})$\\
+min. KNF: 0en, alle Var neg.\\
+logische Fkt.:$F = \overline{AB} \Rightarrow $ NAND
+log./Schalt-Verknüpfung:$y = \overline{AB} $\\
+Nur NAND $\Rightarrow$ 2 Nega., keine +\\
 
-\vspace{0.8cm}
+\underline{\textbf{Multiplexer:}}\\
+OBDD: Nutze Shannon(0en 1en\\
+Ebenef(x)=Eb.Baum=Eb. Mult.\\
+
+\vspace{3cm}
 \underline{\textbf{Flip-Flop:}}\\
 Zeitsteuerung:\\ ((1)$|$(2)takt(zustands)$|$(flanken))\\$|$(N. takt) - gesteuertes FF\\
-Falls $>$ an Takt, dann steigende Taktflankengesteuert\\
-Falls $\rlap{o}{>}$, dann fallende Taktflankengesteuert\\
-Datensteuerung:\\ Delay, Toggle (1 Eingang), \\R-S, J-K (2 Eingänge)\\
-MS-FF: $c_M=0,c_S=1 \Rightarrow$ +Flake
+$>$ Takt$\Rightarrow$ steig. TF\\
+$\rlap{o}{>}$ Takt$\Rightarrow$ fall. TF\\
+Datensteuerung:\\ Delay, Toggle(1E), RS, JK (2E)\\
+MS-FF: $c_M=0,c_S=1 \Rightarrow$ +Fl.\\
+J=S; K=R; 1,1 = Inv.\\
 
-\underline{\textbf{Arten von Tabellen:}}\\
-- WW-Tabelle hat Eingänge und Ausgänge berechnet\\
-- ZF-Tabelle hat Eingänge, Zustand(Q) $|$ und Folgezustand (Q+)\\
-- ZÜ-Tabelle hat Zustand $\rightarrow$ Folgezustand(Q+) $|$ Eingänge\\
--ZF- und Atab. hat Binärkod. der Zustandskodierung(K), Eingang(E), Zustände(Q), \\FF-E(J,K) $|$, Folgezustände(Q+), Ausgänge(A \textbf{Gegenwart}), \\ Folgekodierung(k+)\\
+
+
+
 \end{minipage}
 ~~~~~~~
 \begin{minipage}{0.33\textwidth}
@@ -212,23 +220,28 @@ MS-FF: $c_M=0,c_S=1 \Rightarrow$ +Flake
 - Synchron: Er hat Takt\\
 - Asynchron: Er hat keinen Takt\\
 - Autonom: Kein eigener Eingang\\
-- flankengestuerte FF meist durch MS-FF realisiert
+- flankenge. FF oft durch MS-FF\\
+\vspace{9cm}
 
-logische Fkt.:$F = \overline{AB} \Rightarrow $ NAND
-log./Schalt-Verknüpfung:$y = \overline{AB} $
-
-\vspace{8cm}
 \underline{\textbf{Zustandsgraph:}}\\
 - Ist im Prinzip totaler DFA\\
-- Kann Startzustand haben oder nicht.\\
-- K's(Binärcodierte Eingänge) sind Zustände\\
-- Kodiere getaktete Ausgänge als Binärzahl, schreibe Ausgang an jeden Zustand\\
-- Ungetaktete Ausgänge an Pfeile schreiben\\
-- An Pfeil muss Belegung der Eingänge\\
+- Evnt. Startzustand\\
+- K's(BZ-Code E's) als Zustände\\
+- Code getakt. Ausgänge als BZ\\
+- schreibe Code an jeden Zustand\\
+- Ungetakt. Ausgänge an Pfeile\\
+- Belegung der Eingänge an Pfeil\\
 
 \underline{\textbf{One Hot Kodierung:}}\\
 Für jeden Zustand genau ein FF an. Falls (0,0,0,...) Startzustand, dann muss FF0 immer 1 sein, außer wenn Zustand 0 ist, dann ist alles 0
 \end{minipage}%
-% TODO Speicher nicht Übung, aber dennoch in Klausur
+
+\vspace*{-0.5 cm}
+\underline{\textbf{Arten von Tabellen:}}\\
+- WW-Tabelle hat Eingänge und Ausgänge berechnet\\
+- ZF-Tabelle hat Eingänge, Zustand(Q) $|$ und Folgezustand (Q+)\\
+- ZÜ-Tabelle hat Zustand $\rightarrow$ Folgezustand(Q+) $|$ Eingänge\\
+-ZF+AT: Code der Q's ohne E(K),E's, Zustände(Q), FF-E(J,K) $|$, FolgeZ(Q+), Ausgänge\textbf{!Gegenw.!},K+\\
+\phantom{ss} J,K aus Formeln, Q+ aus J,K
 
 \end{document}
