--- a/FormelnTGI.tex
+++ b/FormelnTGI.tex
@@ -1,4 +1,5 @@
  \documentclass[11pt]{article}
+ % TODO Minimumschaltung + Funktion drauf
 
 \usepackage{graphicx}
 \usepackage[utf8]{inputenc}
@@ -113,7 +114,7 @@ Lichtleistung: $L_P = 10 \cdot lg\frac{P_e}{P_a} dB$\\
 ~~~~~~
 \begin{minipage}{0.33\textwidth}
 \underline{\textbf{Operationsverstärker:}}\\
-$V_D = \infty I_P=I_N=R_D=U_D=0$
+$V_D = \infty I_P=I_N=R_D=U_D=V_G=R_a=0$\\
 \includegraphics[scale=0.40]{NIOV.png}
 \includegraphics[scale=0.40]{IOV.png}
 $U_D = 0 \Rightarrow I_N = 0, U_N = 0$\\
@@ -129,6 +130,7 @@ $U_D = 0 = U_P - U_{E_{LH}}$\\
 Diode: $\Rightarrow U_{E_{LH}} = 0$\\
 Schalthysterese:\\
 \phantom{sssssi} $H = |U_{E_{HL}} - U_{E_{LH}}|$\\
+z.B. V Low-High: $\Rightarrow U_G = U_{SP}, U_A=L$
 
 \includegraphics[scale=0.40]{Zehnerpotenzen.jpg}
 
@@ -192,7 +194,10 @@ min. DNF: 1en Verbinden\\
 min. KNF: 0en, alle Var neg.\\
 logische Fkt.:$F = \overline{AB} \Rightarrow $ NAND
 log./Schalt-Verknüpfung:$y = \overline{AB} $\\
-Nur NAND $\Rightarrow$ 2 Nega., keine +\\
+Nur NAND $\Rightarrow$ 2 Nega., keine +, 1N über ganzer Formel\\
+$\overline{y}$ = NMOS\\
+$\overline{NMOS} \rightarrow$ y = PMOS\\
+
 
 \underline{\textbf{Multiplexer:}}\\
 OBDD: Nutze Shannon(0en 1en\\
@@ -206,7 +211,8 @@ $\rlap{o}{>}$ Takt$\Rightarrow$ fall. TF\\
 Datensteuerung:\\ Delay, Toggle(1E), RS, JK (2E)\\
 MS-FF: $c_M=0,c_S=1 \Rightarrow$ +Fl.\\
 J=S; K=R; 1,1 = Inv.\\
-
+NAND: J-K:4, R-S:2,
+Trans.: NAND: 4, D-FF: 142
 
 
 
@@ -221,7 +227,12 @@ J=S; K=R; 1,1 = Inv.\\
 - Asynchron: Er hat keinen Takt\\
 - Autonom: Kein eigener Eingang\\
 - flankenge. FF oft durch MS-FF\\
-\vspace{9cm}
+
+\underline{\textbf{Synthese}}\\
+- Zustandsgraph $\Rightarrow$ ZF-AFT: Kenne Q, Q+ $\Rightarrow$ Wie FF's schalten
+
+-11.6, 11.7: Graph $\Rightarrow$ Kodierung Zustände $\Rightarrow$ ZT+AT $\Rightarrow$ Schaltung
+\vspace{5cm}
 
 \underline{\textbf{Zustandsgraph:}}\\
 - Ist im Prinzip totaler DFA\\
@@ -236,7 +247,7 @@ J=S; K=R; 1,1 = Inv.\\
 Für jeden Zustand genau ein FF an. Falls (0,0,0,...) Startzustand, dann muss FF0 immer 1 sein, außer wenn Zustand 0 ist, dann ist alles 0
 \end{minipage}%
 
-\vspace*{-0.5 cm}
+\vspace*{-0.3 cm}
 \underline{\textbf{Arten von Tabellen:}}\\
 - WW-Tabelle hat Eingänge und Ausgänge berechnet\\
 - ZF-Tabelle hat Eingänge, Zustand(Q) $|$ und Folgezustand (Q+)\\
