--- a/FormelnTGI.tex
+++ b/FormelnTGI.tex
@@ -211,8 +211,8 @@ $\rlap{o}{>}$ Takt$\Rightarrow$ fall. TF\\
 Datensteuerung:\\ Delay, Toggle(1E), RS, JK (2E)\\
 MS-FF: $c_M=0,c_S=1 \Rightarrow$ +Fl.\\
 J=S; K=R; 1,1 = Inv.\\
-NAND: J-K:4, R-S:2,
-Trans.: NAND: 4, D-FF: 142
+NAND: J-K:4, R-S:2,\\
+Trans.: NAND: 4, D-FF: 14\\
 
 
 
