--- a/FormelnTGI.tex
+++ b/FormelnTGI.tex
@@ -88,11 +88,11 @@ $X' = \frac{X}{l}$\\
 $k_0 = \frac{R_w}{R_w + R_i} $\\
 $r_a = \frac{R_a - R_w}{R_a + R_w} $\\
 $k_a = 1 + r_a = k_1$\\
-$R_w ==$ WS der Leitung\\
-$R_i ==$ WS vor der Leitung\\
-$R_a ==$ WS nach der Leitung\\
+$R_w \hat{=}$ WS der Leitung\\
+$R_i \hat{=}$ WS vor der Leitung\\
+$R_a \hat{=}$ WS nach der Leitung\\
 $U_q == U_i$\\
-$t_i ==$ High-Zeit\\
+$t_i \hat{=}$ High-Zeit\\
 Reflexion: $U_r(l,t) = r_a \cdot U_k(l,t)$\\
 Anfang: $U_k(0,t)=k_0 \cdot U_{q}(t)$\\
 Mitte/Ende:\\
