--- a/FormelnTGI.tex
+++ b/FormelnTGI.tex
@@ -129,7 +129,33 @@ Schalthysterese:\\
 \phantom{sssssi} $H = |U_{E_{HL}} - U_{E_{LH}}|$\\
 z.B. V Low-High: $\Rightarrow U_G = U_{SP}, U_A=L$
 
-\includegraphics[scale=0.40]{Zehnerpotenzen.jpg}
+\begin{tabular}{| l l l |}
+	\hline
+	Name & Zeichen & Potenz\\[0.5ex]
+	\hline
+	\hline
+	Peta & P & $10^{15}$\\
+	\hline
+	Tera & T & $10^{12}$\\
+	\hline
+	Giga & G & $10^9$\\
+	\hline
+	Mega & M & $10^6$\\
+	\hline
+	Kilo & k & $10^3$\\[0.5ex]
+	\hline
+	\hline
+	Milli & m & $10^{-3}$\\
+	\hline
+	Mikro & $\mu$ & $10^{-6}$\\
+	\hline
+	Nano & n & $10^{-9}$\\
+	\hline
+	Piko & p & $10^{-12}$\\
+	\hline
+	Femto & f & $10^{-15}$\\
+	\hline
+\end{tabular}
 
 \end{minipage}%
 
