clarify and ammend capacitor section

--- a/FormelnTGI.tex
+++ b/FormelnTGI.tex
@@ -27,32 +27,30 @@ Kein Strom $\Rightarrow$ U in Masche gleich!\\
 U zu Masse $\Rightarrow$ alles danach drin
 
 \underline{\textbf{Kondensator:}}\\
-Kapazität: $C = \frac{Q}{U} = \frac{\varepsilon \cdot A }{d},$\\
-\phantom{ssssssssssii} $[C]=1F$\\
+Kapazität: $C = \frac{Q}{U}, [C]=F=\frac{A \cdot s}{V}$\\
+Plattenkondensator: $C=\frac{\varepsilon \cdot A }{d}$\\
 Ladung: $Q = \int_{t_0}^t i(\tau) d\tau + q_0$\\
 \phantom{sssssssis} $\stackrel{homogen}{=} I \cdot t$\\
-\phantom{ssssssssssii} $[q]=1C$\\
+\phantom{ssssssssssii} $[q]=C=A \cdot s$\\
 Spannung: $U = \frac{Q}{C}$\\
 Kond. parallel: $C_{ges} = C_1 + C_2$\\
 Kond. in Reihe: $C_{ges} = C_1 || C_2$\\
 Kond. in Reihe: $Q_1 = Q_2 = Q_{12}$\\
-
 $u_c(t) = u_c(\infty) + (u_{pre} - u_c(\infty)) \cdot e^{-\frac{t-t_0}{\tau}}$\\
-Wenn WS dazu, dann V-Teiler\\
-$[k] = 1V$\\
-Str.q: $U = \frac{Q}{C} = \frac{I_q \cdot (t-t_0)}{C} + U_c(t_0)$\\
+Str.q: $U_c(t) = \frac{Q}{C} = \frac{I_q \cdot (t-t_0)}{C} + U_c(t_0)$\\
 \phantom{sss} ,Kennlinie linear\\
-\textbf{2}Zeitkonst.: $\tau = R \cdot C;[\tau] = 1s$\\
-\phantom{ss}falls WS in Reihe $\Rightarrow$ parallel\\
-$t =\frac{T}{2} = \frac{1}{2f}$\\
+Zeitkonstante: $\tau = R \cdot C;[\tau] = 1s$\\
 Zeit Auf-/Entlanden: $t = 3\tau$\\
+Paralleler $R_1$: $\tau = (R_1 || R_2) \cdot C$\\
+\includegraphics[scale=0.1]{kondensatorpr.png}\\
+$t =\frac{T}{2} = \frac{1}{2f}$\\
 
 "einge." $\Rightarrow i_C = C \cdot \frac{dU_c}{dt} = 0$\\
 \phantom{sss} $\Rightarrow U_x = 0 \Rightarrow U_Y = U_B$
 
 Arbeit(=Energie): $W = \int_0^\infty P dt$\\
 \phantom{sssssssss} $= \frac{U_b^2 \cdot C}{2} $\\
-\phantom{sssssssss} $= [W] = 1J $\\
+\phantom{sssssssss} $= [W] = J = V \cdot A \cdot s$\\
 $W_{Zyklus} = W_a + W_e$\\
 $\overline{P} = \frac{W_{Zyklus}}{T}$\\
 Tiefpass: Oben R, Mitte C, Integrator\\
