--- a/FormelnTGI.tex
+++ b/FormelnTGI.tex
@@ -42,9 +42,8 @@ Str.q: $U_c(t) = \frac{Q}{C} = \frac{I_q \cdot (t-t_0)}{C} + U_c(t_0)$\\
 Zeitkonstante: $\tau = R \cdot C;[\tau] = 1s$\\
 Zeit Auf-/Entlanden: $t = 3\tau$\\
 Paralleler $R_1$: $\tau = (R_1 || R_2) \cdot C$\\
-\includegraphics[scale=0.1]{kondensatorpr.png}\\
+\includegraphics[scale=0.15]{kondensatorpr.png}\\
 $t =\frac{T}{2} = \frac{1}{2f}$\\
-
 "einge." $\Rightarrow i_C = C \cdot \frac{dU_c}{dt} = 0$\\
 \phantom{sss} $\Rightarrow U_x = 0 \Rightarrow U_Y = U_B$
 
@@ -53,8 +52,9 @@ Arbeit(=Energie): $W = \int_0^\infty P dt$\\
 \phantom{sssssssss} $= [W] = J = V \cdot A \cdot s$\\
 $W_{Zyklus} = W_a + W_e$\\
 $\overline{P} = \frac{W_{Zyklus}}{T}$\\
-Tiefpass: Oben R, Mitte C, Integrator\\
-HP: Kennl.$U_A$ seltsam,$U_E$ normal
+\textbf{Tiefpass}: Integrator\\
+\includegraphics[scale=0.3]{tiefpass.png}\\
+\includegraphics[scale=0.1]{tiefpassuit.png}
 \end{minipage}%
 ~~~~~~~
 \begin{minipage}{0.33\textwidth}
