--- a/FormelnTGI.tex
+++ b/FormelnTGI.tex
@@ -58,7 +58,9 @@ $\overline{P} = \frac{W_{Zyklus}}{T}$\\
 \end{minipage}%
 ~~~~~~~
 \begin{minipage}{0.33\textwidth}
-
+\textbf{Hochpass:} Differentiator\\
+\includegraphics[scale=0.3]{hochpass.png}\\
+\includegraphics[scale=0.1]{hochpassuit.png}\\
 \underline{\textbf{Felder:}}\\
 Stromdichte: $S=\frac{I}{A}$\\
 Feldstärke: $E=\frac{S}{\kappa}$\\
