Made one formular more readable

--- a/FormelnTGI.tex
+++ b/FormelnTGI.tex
@@ -48,7 +48,7 @@ $t =\frac{T}{2} = \frac{1}{2f}$\\
 \phantom{sss} $\Rightarrow U_x = 0 \Rightarrow U_Y = U_B$
 
 Arbeit(=Energie): $W = \int_0^\infty P dt$\\
-\phantom{sssssssss} $= \frac{U_b^2 \cdot C}{2} $\\
+\phantom{sssssssss} $= \frac{1}{2} U_b^2 \cdot C$ \\
 \phantom{sssssssss} $= [W] = J = V \cdot A \cdot s$\\
 $W_{Zyklus} = W_a + W_e$\\
 $\overline{P} = \frac{W_{Zyklus}}{T}$\\
