--- a/FormelnTGI.tex
+++ b/FormelnTGI.tex
@@ -62,15 +62,21 @@ $\overline{P} = \frac{W_{Zyklus}}{T}$\\
 \includegraphics[scale=0.3]{hochpass.png}\\
 \includegraphics[scale=0.1]{hochpassuit.png}\\
 \underline{\textbf{Felder:}}\\
-Stromdichte: $S=\frac{I}{A}$\\
+Stromdichte: $S=\frac{I}{A}$; $[S] = \frac{A}{m^2}$\\
 Feldstärke: $E=\frac{S}{\kappa}$\\
+Leitfähigkeit $\kappa = \rho \cdot \mu$\\
+Ladungstr.bewegl.: $\rho$; Raumlad.dicht.: $\mu$\\
+Homogenes Feld: $E=\frac{U}{s}$ {\tiny$s\hat{=}$ Plattenabstand}\\
 Spannungsabfall: $U=E \cdot l$\\
 Pot.: $\varphi (x)= \int_x^0 E(s)$ds$ + \varphi(0)$\\
 Stromstärke: $I = \oint H $ds$ = H \cdot 2\pi d$\\
 Mag.Feldstr.: $H = \frac{I}{2\pi d}, [H] = 1\frac{A}{m}$\\
+\includegraphics[scale=0.14]{mfeld.png}\\
 Kraft pro Leitungslänge:\\
 \phantom{ss} $F=Q \cdot v \cdot B, [F] = 1N$\\
-Ladung pro mm: $Q = \rho \cdot V$\\
+Gerader Leiter: $F=I \cdot l \cdot B$ {\tiny($\vec{B} \bot \vec{I}$)}\\
+\phantom{ss}($l \hat{=}$Länge d. Leiters)\\
+Ladung im Raum: $Q = \rho \cdot V$\\
 $e^-$, Drift-Gesch.: $v = \frac{S}{\rho}, [v] = 1\frac{m}{s}$\\
 Flussdichte: $B=\mu \cdot H, [B] = 1 \frac{Vs}{m^2}$\\
  
@@ -303,4 +309,7 @@ Für jeden Zustand genau ein FF an. Falls (0,0,0,...) Startzustand, dann muss FF
 -ZF+AT: Code der Q's ohne E(K),E's, Zustände(Q), FF-E(J,K) $|$, FolgeZ(Q+), Ausgänge\textbf{!Gegenw.!},K+\\
 \phantom{ss} J,K aus Formeln, Q+ aus J,K
 
+
+\underline{\textbf{Misc}}
+Kreis: $A = \pi \cdot r^2$\\
 \end{document}
