add verstärkung + synthese refactor

--- a/FormelnTGI.tex
+++ b/FormelnTGI.tex
@@ -117,9 +117,11 @@ Eingangs-WD $R_+ = R_- = \infty$ \\
 Ausgangs-WD $R_a = 0$ \\
 $\implies I_+ = I_- = 0$ \\
 
-\includegraphics[scale=0.40]{NIOV.png}
+\includegraphics[scale=0.40]{NIOV.png}\\
+$v=1+\frac{R_2}{R_1}$\\
 \includegraphics[scale=0.40]{IOV.png} \\
-$U_D = 0$, Gegenkoppung\\
+$v=-\frac{R_2}{R_1}$\\
+Gegenkoppung $\Rightarrow U_D = 0$\\
 
 \includegraphics[scale=0.40]{NISTOV.png}
 \includegraphics[scale=0.40]{ISTOV.png}\\
@@ -297,10 +299,7 @@ Transistoren: NAND: 4, D-FF: 14 \\
 - Flankengest. Oft Master-Slave \\
 
 \underline{\textbf{Synthese}}\\
-- Zustandsgraph $\Rightarrow$ ZF-AFT: Kenne Q, Q+ $\Rightarrow$ Wie FF's schalten
-
--11.6, 11.7: Graph $\Rightarrow$ Kodierung Zustände $\Rightarrow$ ZT+AT $\Rightarrow$ Schaltung
-\vspace{5cm}
+Zustandsgraph $\Rightarrow$ kodierung in FFs $\Rightarrow$ ZF-AFT: Kenne Q, Q+ $\Rightarrow$ FF-Eingänge+Ausgänge via KV ermitteln $\Rightarrow$ Schaltung aus ermittelten Formeln ableiten\\
 
 \underline{\textbf{Zustandsgraph:}}\\
 - Ist im Prinzip totaler DFA\\
@@ -324,6 +323,6 @@ Für jeden Zustand genau ein FF an. Falls (0,0,0,...) Startzustand, dann muss FF
 \phantom{ss} J,K aus Formeln, Q+ aus J,K
 
 
-\underline{\textbf{Misc}}
+\underline{\textbf{Misc}}\\
 Kreis: $A = \pi \cdot r^2$\\
 \end{document}
