--- a/FormelnTGI.tex
+++ b/FormelnTGI.tex
@@ -242,7 +242,8 @@ auszurechnen. \\
 ~~~~~~~
 \begin{minipage}{0.33\textwidth}
 
-
+\includegraphics[scale=0.3]{opv1.png}\\
+\includegraphics[scale=0.3]{opv2.png}
 \underline{\textbf{Logik:}}\\
 KDNF: Minterme(y=1) $\implies a\overline{b}c + ...$\\
 \phantom{sssi} $a=1 \to a, \hspace{2mm} b=0 \to \overline{b}$ \\
